# OmegaV-desktop-notification-daemon

./: .gitignore  Cargo.toml  README.md  install.sh  omegav-daemon.desktop  windows-installer.nsi
src/: main.rs
