[package]
name = "omegav-daemon"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = { version = "4.8.0", features = ["image"] }
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }

[install]
root = "~/.local/bin"

[features]
console = []
